# linkedin-search

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/skills/browser-bridge-automation-dev-flow/: SKILL.md
.cursor/skills/pre-commit-repo-safety/: SKILL.md
linkedin_search/: __init__.py  browser.py  callbacks.py  cli.py  csv_exporter.py  dev_browser.py  humanize.py  json_exporter.py  models.py  search.py  session.py
tests/: test_cli_parser.py  test_company_url.py  test_csv_export.py  test_dev_browser_state.py  test_humanize.py  test_json_export.py  test_standard_location_filter.py
